# tokenkickstarter-node

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build_all.sh  custom_spec.json  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/wiki/: Architecture.md  Build-and-Release.md  Contributing.md  Custom-Pallets.md  Getting-Started.md  Home.md  MetaMask-and-EVM.md  Network-Overview.md  Pallet-Reference.md  RPC-API-Reference.md  Running-a-Node.md  Running-a-Validator.md  Security.md
.github/workflows/: build-release.yml  publish-wiki.yml  release.yml
bridge/contracts/: TKSBridge.sol
calc-ecdsa/: Cargo.toml
calc-ecdsa/src/: main.rs
cipher-relay/: Cargo.toml
cipher-relay/src/: lib.rs  main.rs
network/: DNS-SETUP.md  GENESIS-AND-BRIDGE.md  README.md  docker-compose.yml  install.sh  server-setup.sh  start-bootnode-1.sh  start-bootnode-2.sh  start-bootnode-3.sh  start-node.bat  tks-bootnode.service  tks-cli  tks-node.service  tks-testnet-spec.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/pallet-adaptive-gas/: Cargo.toml
pallets/pallet-adaptive-gas/src/: lib.rs
pallets/pallet-hyperswarm-anchor/: Cargo.toml
pallets/pallet-hyperswarm-anchor/src/: lib.rs
pallets/pallet-name-registry/: Cargo.toml
pallets/pallet-name-registry/src/: lib.rs
pallets/pallet-shard-registry/: Cargo.toml
pallets/pallet-shard-registry/src/: lib.rs
releases/v0.3.0/: RPC-CLI-REFERENCE.md  SHA256SUMS.txt  inject-validator-keys.sh  install.sh  purge-chain.sh  server-setup.sh  start-bootnode.sh  start-node.sh  start-validator.sh  tks-testnet-spec-raw.json
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  precompiles.rs
