[workspace]
members = [
    "node",
    "runtime",
    "pallets/pallet-name-registry",
]
resolver = "2"

[workspace.package]
authors = ["TokenKickstarter <dev@tokenkickstarter.com>"]
edition = "2021"
homepage = "https://tokenkickstarter.com"
license = "MIT"
repository = "https://github.com/TokenKickstarter/tks-substrate-node"

[workspace.dependencies]
# Substrate FRAME
frame-support          = { version = "45.1.0", default-features = false }
frame-system           = { version = "45.0.0", default-features = false }
frame-executive        = { version = "45.0.1", default-features = false }
frame-benchmarking     = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }

# Pallets
pallet-balances        = { version = "46.0.0", default-features = false }
pallet-timestamp       = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
pallet-sudo            = { version = "45.0.0", default-features = false }
pallet-aura            = { version = "44.0.0", default-features = false }
pallet-grandpa         = { version = "45.0.0", default-features = false }
pallet-staking         = { version = "45.0.0", default-features = false }
pallet-session         = { version = "45.0.0", default-features = false }

# Substrate Primitives
sp-core                = { version = "39.0.0", default-features = false }
sp-io                  = { version = "44.0.0", default-features = false }
sp-runtime             = { version = "45.0.0", default-features = false }
sp-api                 = { version = "40.0.0", default-features = false }
sp-block-builder       = { version = "40.0.0", default-features = false }
sp-consensus-aura      = { version = "0.46.0", default-features = false }
sp-consensus-grandpa   = { version = "27.0.0", default-features = false }
sp-genesis-builder     = { version = "0.21.0", default-features = false }
sp-inherents           = { version = "40.0.0", default-features = false }
sp-offchain            = { version = "40.0.0", default-features = false }
sp-session             = { version = "42.0.0", default-features = false }
sp-transaction-pool    = { version = "40.0.0", default-features = false }
sp-version             = { version = "43.0.0", default-features = false }
sp-storage             = { version = "22.0.0", default-features = false }
sp-blockchain          = { version = "43.0.0" }
sp-keyring             = { version = "45.0.0", default-features = false }
sp-timestamp           = { version = "40.0.0" }

# Substrate Client (native-only, no no_std)
sc-cli                 = { version = "0.57.0" }
sc-client-api          = { version = "44.0.0" }
sc-consensus           = { version = "0.54.0" }
sc-consensus-aura      = { version = "0.55.0" }
sc-consensus-grandpa   = { version = "0.40.0" }
sc-executor            = { version = "0.47.0" }
sc-keystore            = { version = "39.0.0" }
sc-network             = { version = "0.55.1" }
sc-offchain            = { version = "50.0.0" }
sc-service             = { version = "0.56.0" }
sc-telemetry           = { version = "30.0.0" }
sc-transaction-pool    = { version = "44.1.0" }
sc-transaction-pool-api = { version = "43.0.0" }
sc-basic-authorship    = { version = "0.53.0" }
substrate-frame-rpc-system = { version = "49.0.0" }
pallet-transaction-payment-rpc = { version = "48.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-wasm-builder  = { version = "24.0.1" }

# Local pallets
pallet-name-registry = { path = "pallets/pallet-name-registry", default-features = false }

# Common
codec   = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde   = { version = "1.0", default-features = false }
serde_json = "1.0"
jsonrpsee = { version = "0.24", features = ["server"] }
clap    = { version = "4.5", features = ["derive"] }
futures = "0.3"
log     = { version = "0.4", default-features = false }

[profile.release]
panic = "unwind"
