[workspace]
members = [
    "node",
    "runtime",
    "pallets/pallet-name-registry",
    "pallets/pallet-shard-registry",
    "pallets/pallet-hyperswarm-anchor",
    "pallets/pallet-adaptive-gas",
    "calc-ecdsa",
    "cipher-relay",
]
resolver = "2"

[workspace.package]
authors = ["TokenKickstarter <dev@tokenkickstarter.com>"]
edition = "2021"
homepage = "https://tokenkickstarter.com"
license = "MIT"
repository = "https://github.com/TokenKickstarter/tokenkickstarter-node"

[workspace.dependencies]
# ─── Substrate FRAME ───────────────────────────────────────────────
frame-support          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-system           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-executive        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-benchmarking     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }

# ─── Pallets ───────────────────────────────────────────────────────
pallet-balances        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-timestamp       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-sudo            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-aura            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-grandpa         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-staking         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-session         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-treasury        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-bags-list       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-authorship      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-nfts                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }

# ─── Substrate Primitives ──────────────────────────────────────────
sp-core                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-io                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-runtime             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-api                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-block-builder       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-consensus-aura      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-consensus-grandpa   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-genesis-builder     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-inherents           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-offchain            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-session             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-transaction-pool    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-version             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-storage             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-blockchain          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-keyring             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-timestamp           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-staking             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }

# ─── Substrate Client (native-only) ───────────────────────────────
sc-cli                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-client-api          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-consensus           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-consensus-aura      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-consensus-grandpa   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-executor            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-keystore            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-network             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-offchain            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-service             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-telemetry           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-transaction-pool    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-basic-authorship    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
substrate-wasm-builder  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
cumulus-primitives-proof-size-hostfunction = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }


# ─── Frontier (EVM) Primitives ─────────────────────────────────────
fp-account             = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
fp-evm                 = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
fp-rpc                 = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
fp-self-contained      = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
fp-dynamic-fee         = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
fp-ethereum            = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }

# ─── Frontier (EVM) Pallets ────────────────────────────────────────
pallet-evm             = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-ethereum        = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-base-fee        = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-dynamic-fee     = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-evm-chain-id    = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }
pallet-hotfix-sufficients = { git = "https://github.com/polkadot-evm/frontier", branch = "master", default-features = false }

# ─── Frontier Client (node-side) ──────────────────────────────────
fc-api                 = { git = "https://github.com/polkadot-evm/frontier", branch = "master" }
fc-consensus           = { git = "https://github.com/polkadot-evm/frontier", branch = "master" }
fc-db                  = { git = "https://github.com/polkadot-evm/frontier", branch = "master", features = ["rocksdb"] }

fc-mapping-sync        = { git = "https://github.com/polkadot-evm/frontier", branch = "master" }
fc-rpc                 = { git = "https://github.com/polkadot-evm/frontier", branch = "master" }
fc-rpc-core            = { git = "https://github.com/polkadot-evm/frontier", branch = "master" }
fc-storage             = { git = "https://github.com/polkadot-evm/frontier", branch = "master" }

# ─── Local pallets ────────────────────────────────────────────────
pallet-name-registry = { path = "pallets/pallet-name-registry", default-features = false }
pallet-shard-registry = { path = "pallets/pallet-shard-registry", default-features = false }
pallet-hyperswarm-anchor = { path = "pallets/pallet-hyperswarm-anchor", default-features = false }
pallet-adaptive-gas = { path = "pallets/pallet-adaptive-gas", default-features = false }

# ─── Common ───────────────────────────────────────────────────────
codec   = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
ethereum = { version = "0.18", default-features = false }
serde   = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
jsonrpsee = { version = "0.24", features = ["server"] }
clap    = { version = "4.5", features = ["derive"] }
futures = "0.3"
log     = { version = "0.4", default-features = false }

[profile.release]
panic = "unwind"
