[package]
name = "calc-ecdsa"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = "0.4.3"
keccak-hash = "0.12.0"
libsecp256k1 = "0.7.2"
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
sha3 = "0.10"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", version = "39.0.0" }
parity-scale-codec = { version = "3", features = ["derive"] }
