[package]
name = "cipher-relay"
version = "0.1.0"
edition = "2021"
description = "Cipher Storage Swarm Relay — libp2p message relay running alongside TKS node"

[lib]
name = "cipher_relay"
path = "src/lib.rs"

[[bin]]
name = "cipher-relay"
path = "src/main.rs"

[dependencies]
# libp2p for peer-to-peer networking
libp2p = { version = "0.54", features = [
  "tokio", "noise", "yamux", "tcp", "websocket", "dns",
  "request-response", "kad", "gossipsub", "identify",
  "relay", "macros", "serde"
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hex encoding
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4"] }

# SHA2 for Kademlia key hashing
sha2 = "0.10"

# Lightweight HTTP server for mobile client REST API
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# Client for RPC Proxy
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
