[package]
name = "tks-chain-node"
version = "0.1.0"
description = "TKS (TokenKickstarter) Substrate node — the blockchain binary anyone can run"
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "tks-chain-node"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
log = { version = "0.4" }

# Substrate Client
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-basic-authorship = { workspace = true }

# Substrate Primitives
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true }
sp-blockchain = { workspace = true }

# RPC
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = ["std"] }

# Runtime
tks-runtime = { path = "../runtime" }
