[package]
name = "tks-chain-node"
version = "0.1.0"
description = "TKS (TokenKickstarter) Substrate node — the blockchain binary anyone can run"
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "tks-chain-node"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
log = { version = "0.4" }
hex = { version = "0.4", default-features = false }
# TKS Local Dependencies
cipher-relay = { path = "../cipher-relay" }


# Substrate Client
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-basic-authorship = { workspace = true }

# Substrate Primitives
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true }
sp-blockchain = { workspace = true }

# RPC
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = ["std"] }

# Frontier Client (EVM RPC)
fc-api = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }

# Frontier Primitives (needed for node)
fp-account = { workspace = true, features = ["std"] }
fp-evm = { workspace = true, features = ["std"] }
fp-rpc = { workspace = true, features = ["std"] }
fp-dynamic-fee = { workspace = true, features = ["std"] }

# Ethereum/EVM (for TransactionConverter)
pallet-ethereum = { workspace = true, features = ["std"] }
ethereum = { workspace = true, features = ["std"] }

# Additional node deps for Frontier
sp-inherents = { workspace = true, features = ["std"] }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
cumulus-primitives-proof-size-hostfunction = { workspace = true }


# Runtime
tks-runtime = { path = "../runtime" }
