[package]
name = "tks-runtime"
version = "0.1.0"
description = "TKS (TokenKickstarter) Substrate runtime — Aura/GRANDPA consensus, TKS native token, username registry"
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Substrate FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }

# Pallets
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Local pallets
pallet-name-registry = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-name-registry/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "substrate-wasm-builder",
]
