[package]
name = "tks-runtime"
version = "0.1.0"
description = "TKS (TokenKickstarter) Substrate runtime — NPoS consensus, TKS token, staking, treasury, EVM, username registry"
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ethereum = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# Substrate FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-election-provider-support = { workspace = true }

# Pallets
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-treasury = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-nfts = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Frontier (EVM)
fp-account = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
fp-ethereum = { workspace = true }
fp-dynamic-fee = { workspace = true }
pallet-evm = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-hotfix-sufficients = { workspace = true }

# Substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Local pallets
pallet-name-registry = { workspace = true }
pallet-shard-registry = { workspace = true }
pallet-hyperswarm-anchor = { workspace = true }
pallet-adaptive-gas = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "serde/std",
    "ethereum/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-election-provider-support/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-bags-list/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-nfts/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-name-registry/std",
    "pallet-shard-registry/std",
    "pallet-hyperswarm-anchor/std",
    "pallet-adaptive-gas/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "substrate-wasm-builder",
    # Frontier
    "fp-account/std",
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    "fp-ethereum/std",
    "fp-dynamic-fee/std",
    "pallet-evm/std",
    "pallet-ethereum/std",
    "pallet-base-fee/std",
    "pallet-dynamic-fee/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-hotfix-sufficients/std",
]
