[package]
name    = "pallet-adaptive-gas"
version = "0.1.0"
edition = "2021"
authors = ["TKS Team"]
description = "Adaptive block gas limit and block size — auto-scales TPS based on network load."

[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-runtime    = { workspace = true }
sp-core       = { workspace = true }
sp-io         = { workspace = true }
codec      = { workspace = true }
scale-info = { workspace = true }
log = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "codec/std",
    "scale-info/std",
]
runtime-benchmarks = []
try-runtime = []
