[package]
name = "pallet-hyperswarm-anchor"
version = "0.1.0"
description = "TKS HyperSwarm anchor — stores DAG Merkle root hashes on the root chain for provable message delivery"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
log = { workspace = true }

[dev-dependencies]
sp-runtime = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "log/std",
]
try-runtime = ["frame-support/try-runtime"]
