[package]
name = "pallet-shard-registry"
version = "0.1.0"
description = "TKS HyperSwarm shard registry — maps validators to message shards with VRF-based epoch rotation"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
sp-runtime = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "log/std",
    "serde/std",
]
try-runtime = ["frame-support/try-runtime"]
